--- a/FloridaUCTF/Content/Site.css
+++ b/FloridaUCTF/Content/Site.css
@@ -42,11 +42,14 @@ textarea {
 	border-right: 2px lightblue dotted;
 }
 .checkbox-col {
-	padding-right
+	padding-right : 0;
 }
 .checkbox-label {
 	margin-bottom : 0;
 	margin-top : 5px;
+}
+.emphasize {
+	color :red;
 }
 .field-label {
 	float: left;
@@ -61,6 +64,7 @@ textarea {
 .long-text {
 	width: auto;
 	max-height: 75px;
+	max-width: 750px;
 	overflow : auto;
 	text-overflow : ellipsis;
 	/*overflow: auto;*/
