--- a/FloridaUCTF/Views/Home/Index.cshtml
+++ b/FloridaUCTF/Views/Home/Index.cshtml
@@ -9,96 +9,102 @@
 @using (Html.BeginForm())
 {
 	@Html.AntiForgeryToken()
-	
-	<div class="form-horizontal">
-		<h2 class="text-center">Search Unlicensed Contractor Cases </h2>
-		<hr />
-		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
 		<div class="row">
-			<div class="col-md-4">
-				<div class="panel group-heading"> OFFENDER NAME </div>
-				<div class="form-group">
-					@Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-3 text-right" })
-					<div class="col-md-9">
-						@Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-						@Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-					</div>
-				</div>
-
-				<div class="form-group">
-					@Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-3 text-right" })
-					<div class="col-md-9">
-						@Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-						@Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
-					</div>
-				</div>
-
-				<div class="form-group">
-					@Html.LabelFor(model => model.AKA, htmlAttributes: new { @class = "control-label col-md-3 text-right" })
-					<div class="col-md-9">
-						@Html.EditorFor(model => model.AKA, new { htmlAttributes = new { @class = "form-control" } })
-						@Html.ValidationMessageFor(model => model.AKA, "", new { @class = "text-danger" })
-					</div>
-				</div>
-			</div>
-			<div class="col-md-5">
-				<div class="panel group-heading"> MISCELLANEOUS </div>
-				<div class="form-group">
-					@Html.LabelFor(model => model.CaseNumber, htmlAttributes: new { @class = "control-label col-md-4" })
-					<div class="col-md-8">
-						@Html.EditorFor(model => model.CaseNumber, new { htmlAttributes = new { @class = "form-control" } })
-						@Html.ValidationMessageFor(model => model.CaseNumber, "", new { @class = "text-danger" })
-					</div>
-				</div>
-
-				<div class="form-group">
-					@Html.LabelFor(model => model.BusinessName, htmlAttributes: new { @class = "control-label col-md-4" })
-					<div class="col-md-8">
-						@Html.EditorFor(model => model.BusinessName, new { htmlAttributes = new { @class = "form-control" } })
-						@Html.ValidationMessageFor(model => model.BusinessName, "", new { @class = "text-danger" })
-					</div>
-				</div>
-				<div class="form-group">
-					@Html.LabelFor(model => model.DriveLicense, htmlAttributes: new { @class = "control-label col-md-4" })
-					<div class="col-md-8">
-						@Html.EditorFor(model => model.DriveLicense, new { htmlAttributes = new { @class = "form-control" } })
-						@Html.ValidationMessageFor(model => model.DriveLicense, "", new { @class = "text-danger" })
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="panel group-heading"> LOCATION OF OFFENSE </div>
-				<div class="form-group">
-					@Html.LabelFor(model => model.CaseCity, htmlAttributes: new { @class = "control-label col-md-3" })
-					<div class="col-md-9">
-						@Html.EditorFor(model => model.CaseCity, new { htmlAttributes = new { @class = "form-control" } })
-						@Html.ValidationMessageFor(model => model.CaseCity, "", new { @class = "text-danger" })
-					</div>
-				</div>
-
-				<div class="form-group">
-					@Html.LabelFor(model => model.CaseCounty, htmlAttributes: new { @class = "control-label col-md-3" })
-					<div class="col-md-9">
-						@Html.EditorFor(model => model.CaseCounty, new { htmlAttributes = new { @class = "form-control" } })
-						@Html.ValidationMessageFor(model => model.CaseCounty, "", new { @class = "text-danger" })
-					</div>
-				</div>
-			</div>
+			@Html.ActionLink("Add Offender", "AddOffender", "Home", new { @class = "btn btn-warning" })
+			<h3 class="text-center">Search Cases </h3>
 		</div>
-		<div class="form-group">
-			<div class="col-md-12 text-center">
-				<input type="submit" value="Search" class="btn btn-primary" />
+	<hr />
+		<div class="form-horizontal">
+			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+			<div class="row">
+				<div class="col-md-4">
+					<div class="panel group-heading"> OFFENDER NAME </div>
+					<div class="form-group">
+						@Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-3 text-right" })
+						<div class="col-md-9">
+							@Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+							@Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+						</div>
+					</div>
+
+					<div class="form-group">
+						@Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-3 text-right" })
+						<div class="col-md-9">
+							@Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+							@Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+						</div>
+					</div>
+
+					<div class="form-group">
+						@Html.LabelFor(model => model.AKA, htmlAttributes: new { @class = "control-label col-md-3 text-right" })
+						<div class="col-md-9">
+							@Html.EditorFor(model => model.AKA, new { htmlAttributes = new { @class = "form-control" } })
+							@Html.ValidationMessageFor(model => model.AKA, "", new { @class = "text-danger" })
+						</div>
+					</div>
+					<br />
+				</div>
+				<div class="col-md-5">
+					<div class="panel group-heading"> MISCELLANEOUS </div>
+					<div class="form-group">
+						@Html.LabelFor(model => model.CaseNumber, htmlAttributes: new { @class = "control-label col-md-4" })
+						<div class="col-md-8">
+							@Html.EditorFor(model => model.CaseNumber, new { htmlAttributes = new { @class = "form-control" } })
+							@Html.ValidationMessageFor(model => model.CaseNumber, "", new { @class = "text-danger" })
+						</div>
+					</div>
+
+					<div class="form-group">
+						@Html.LabelFor(model => model.BusinessName, htmlAttributes: new { @class = "control-label col-md-4" })
+						<div class="col-md-8">
+							@Html.EditorFor(model => model.BusinessName, new { htmlAttributes = new { @class = "form-control" } })
+							@Html.ValidationMessageFor(model => model.BusinessName, "", new { @class = "text-danger" })
+						</div>
+					</div>
+					<div class="form-group">
+						@Html.LabelFor(model => model.DriveLicense, htmlAttributes: new { @class = "control-label col-md-4" })
+						<div class="col-md-8">
+							@Html.EditorFor(model => model.DriveLicense, new { htmlAttributes = new { @class = "form-control" } })
+							@Html.ValidationMessageFor(model => model.DriveLicense, "", new { @class = "text-danger" })
+						</div>
+					</div>
+					<br />
+				</div>
+				<div class="col-md-3">
+					<div class="panel group-heading"> LOCATION OF OFFENSE </div>
+					<div class="form-group">
+						@Html.LabelFor(model => model.CaseCity, htmlAttributes: new { @class = "control-label col-md-3" })
+						<div class="col-md-9">
+							@Html.EditorFor(model => model.CaseCity, new { htmlAttributes = new { @class = "form-control" } })
+							@Html.ValidationMessageFor(model => model.CaseCity, "", new { @class = "text-danger" })
+						</div>
+					</div>
+
+					<div class="form-group">
+						@Html.LabelFor(model => model.CaseCounty, htmlAttributes: new { @class = "control-label col-md-3" })
+						<div class="col-md-9">
+							@Html.EditorFor(model => model.CaseCounty, new { htmlAttributes = new { @class = "form-control" } })
+							@Html.ValidationMessageFor(model => model.CaseCounty, "", new { @class = "text-danger" })
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
-		<div>
-			@Html.ActionLink("Add Offender", "AddOffender","Home", new { @class = "btn btn-warning" } );
-		</div>
+			<div class="form-group">
+				<div class="col-md-12 text-center">
+					<input type="submit" value="Search" class="btn btn-primary" />
+					@*@Html.ActionLink("Search", "SearchResultsTable", "Home", new { new { @class = "btn btn-warning" });*@
+				</div>
+			</div>
 
-	</div>
-	<div id="showSearchTable">
 
-	@Html.Partial("SearchResultsTable", Model)
-	</div>
+		</div>
+		<div id="showSearchTable">
+			@if (Model != null && Model.Results != null)
+			{
+				@Html.Partial("SearchResultsTable", Model.Results)
+			}
+		</div>
 }
 
 
