--- a/FloridaUCTF/Views/Home/_EditCitation.cshtml
+++ b/FloridaUCTF/Views/Home/_EditCitation.cshtml
@@ -8,6 +8,7 @@
 	<div class="form-horizontal">
 		<hr />
 		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+		@Html.HiddenFor(model => model.Id)
 		<div class="row">
 			<div class="col-md-4">
 				<div class="form-group">
@@ -40,7 +41,7 @@
 		</div>
 		<div class="form-group">
 			<div class="col-md-12 text-center">
-				<input type="submit" value="Create" class="btn btn-primary" />
+				<input type="submit" value="Save" class="btn btn-primary" />
 			</div>
 		</div>
 	</div>
