--- a/FloridaUCTF/Views/Shared/_Layout.cshtml
+++ b/FloridaUCTF/Views/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Florida Unlicensed Contractor Task Force - by Sherry Hall</p>
         </footer>
     </div>
-
+	
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
