--- a/FloridaUCTF/Views/Home/Index.cshtml
+++ b/FloridaUCTF/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 
 		<div class="row">
 			@Html.ActionLink("Add Offender", "AddOffender", "Home", new { @class = "btn btn-warning" })
-			<h3 class="text-center">Search Cases </h3>
+			<h3>Search Cases </h3>
 		</div>
 	<hr />
 		<div class="form-horizontal">
