--- a/FloridaUCTF/Views/Home/_OffenderSummary.cshtml
+++ b/FloridaUCTF/Views/Home/_OffenderSummary.cshtml
@@ -1,10 +1,10 @@
 ﻿@model FloridaUCTF.Models.Offender
 
-<div class="panel">
+<div class="">
 
-	<div class="row">
+	<div class="row light-blue-background">
 		
-		<table>
+		<table class="">
 
 			<tr>
 				<th> AKAs: </th>
