--- a/FloridaUCTF/Views/Home/AllOffenderDetail.cshtml
+++ b/FloridaUCTF/Views/Home/AllOffenderDetail.cshtml
@@ -5,7 +5,7 @@
 }
 @Html.AntiForgeryToken()
 
-<div class="case-fix-top">
+<div data-spy="affix" data-offset-top="300" class="case-fix-top light-blue-background" >
 <h3>@Model.Full_Name</h3>
 	<div class="row">
 		<div class="col-md-8">
